--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -117,30 +117,34 @@ footer a:hover{
 /* ### conteudo ###*/
 
 .cards{
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 24px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap:20px;
 
 }
 
 
 .cards .card{
+
     height: 500px;
+    max-width: 350px;
     background-color: #1c1f2c;
-    margin: 20px;
     border-radius: 20px;
+    
 }
 
 
 .card-container{
     height: 300px;
     text-align: center;
+    margin: 10px;
 }
 
 .card img{
-    width: 60%;
+
     padding: 20px;
 }
 
@@ -157,21 +161,28 @@ footer a:hover{
     transition: 2000ms var(--primary-color);
 }
 
-.cards .card-content p+p{
-    background-color:#97f09ee7;
-    border-radius: 20px;
-    text-align: center;
-    
-}
-
 .card-content{
     padding:12px;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    margin: 0 30px;
+}
+
+.card-content p+p{
+    text-align: center;
+    
 }
 
 .card-info{
     padding: 12px;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    margin: 0 30px;
+}
+
+.cards .card-info p+p{
+    background-color:#97f09ee7;
+    border-radius: 20px;
+    text-align: center;
+    
 }
