--- a/views/conteudo.html
+++ b/views/conteudo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/styles/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>Rocketseat School - Cursos</title>
 </head>
@@ -27,7 +28,7 @@
     <section class="cards">
 
         <div class="card">
-            <a href="http://rocketseat.com.br">
+           
                 <div class="card-container">
                     <img src="/assets/starter.svg" alt="starter">
                 </div>
@@ -39,11 +40,11 @@
                     <p>Preço</p>
                     <p>Free</p>
                 </div>
-            </a>
+        
         </div>
 
         <div class="card">
-            <a href="http://www.google.com">
+          
                 <div class="card-container">
                     <img src="/assets/launchbase.svg" alt="launchbase">
                 </div>
@@ -55,26 +56,38 @@
                     <p>Preço</p>
                     <p>Free</p>
                 </div>
-            </a>
+            
         </div>
 
         <div class="card">
-            <a href="http://rotamidia.com.br">
-                <div class="card-container">
-                    <img src="/assets/gostack.svg" alt="gostack">
-                </div>
-                <div class="card-content">
-                    <p>Qtd de modulos:</p>
-                    <p>20</p>
-                </div>
-                <div class="card-info">
-                    <p>Preço</p>
-                    <p>Free</p>
-                </div>
-            </a>
+
+            <div class="card-container">
+                <img src="/assets/gostack.svg" alt="gostack">
+            </div>
+            <div class="card-content">
+                <p>Qtd de modulos:</p>
+                <p>20</p>
+            </div>
+            <div class="card-info">
+                <p>Preço</p>
+                <p>Free</p>
+            </div>
+
         </div>
 
     </section>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <a href="" class="close-modal">
+                <span class="material-icons">
+                    close
+                </span>
+            </a>
+            <div class="modal-content"></div>
+        </div>
+    </div>
+
 
     <footer>
         <span>
@@ -83,7 +96,7 @@
             <a href="http://instagram.com.br">Instagram</a>
         </span>
     </footer>
-
+    <script src="/public/scripts/script.js"></script>
 </body>
 
 </html>
