--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>Rocketseat School</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,7 +23,9 @@
     <div id="wrapper">
         <img src="/assets/rocket.jpeg" alt="rocketseat">
         <h1>Rocketseat</h1>
-        <p>A <a href="http://www.rocketseat.com.br" target="_blank">Rocketseat</a> visa formar Devs melhores,aplicações melhores, um mundo melhor.<br> Uma experiência com propósito para impulsionar sua carreira e transformar o mundo.</p>
+        <p>A <a href="http://www.rocketseat.com.br" target="_blank">Rocketseat</a> visa formar Devs melhores,aplicações
+            melhores, um mundo melhor.<br> Uma experiência com propósito para impulsionar sua carreira e transformar o
+            mundo.</p>
 
         <h2>Principais Tecnologias</h2>
 
@@ -43,4 +47,5 @@
     </footer>
 
 </body>
+
 </html>
