--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -133,6 +133,7 @@ footer a:hover{
     max-width: 350px;
     background-color: #1c1f2c;
     border-radius: 20px;
+    cursor: pointer;
     
 }
 
@@ -185,4 +186,43 @@ footer a:hover{
     border-radius: 20px;
     text-align: center;
     
+}
+
+/* ==## Modal Overlay ##== */
+
+.modal-overlay{
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal{
+    background-color: rgba(43, 27, 68, 0.952);
+    width: 70%;
+    height: 70%;
+
+    margin: 10vh auto;
+
+    border-radius: 20px;
+    position: relative;
+
+}
+
+.modal .close-modal{
+
+    color: white;
+    position: absolute;
+    right:16px;
+    top: 8px;
+}
+
+/* ==## Modal ativo ##== */
+
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
 }
