--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -201,13 +201,13 @@ footer a:hover{
 }
 
 .modal{
-    background-color: rgba(43, 27, 68, 0.952);
+    background-color: rgba(43, 27, 68, 0.171);
     width: 70%;
     height: 70%;
 
     margin: 10vh auto;
 
-    border-radius: 20px;
+    border-radius: 3px;
     position: relative;
 
 }
@@ -218,6 +218,16 @@ footer a:hover{
     position: absolute;
     right:16px;
     top: 8px;
+    cursor: pointer;
+}
+
+.modal .maximize-modal{
+    
+    color: white;
+    position: absolute;
+    right:50px;
+    top: 10px;
+    cursor: pointer;
 }
 
 /* ==## Modal ativo ##== */
@@ -225,4 +235,19 @@ footer a:hover{
 .modal-overlay.active{
     opacity: 1;
     visibility: visible;
+}
+
+.modal.maximize{
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+
+.modal-content iframe{
+    
+    width: 100%;
+    height: 95%;
+    position: absolute;
+    top: 6%;
 }
