--- a/views/conteudo.html
+++ b/views/conteudo.html
@@ -27,39 +27,39 @@
 
     <section class="cards">
 
-        <div class="card">
-           
-                <div class="card-container">
-                    <img src="/assets/starter.svg" alt="starter">
-                </div>
-                <div class="card-content">
-                    <p>Qtd de modulos</p>
-                    <p>10</p>
-                </div>
-                <div class="card-info">
-                    <p>Preço</p>
-                    <p>Free</p>
-                </div>
-        
+        <div class="card" id="starter">
+
+            <div class="card-container">
+                <img src="/assets/starter.svg" alt="starter">
+            </div>
+            <div class="card-content">
+                <p>Qtd de modulos</p>
+                <p>10</p>
+            </div>
+            <div class="card-info">
+                <p>Preço</p>
+                <p>Free</p>
+            </div>
+
         </div>
 
-        <div class="card">
-          
-                <div class="card-container">
-                    <img src="/assets/launchbase.svg" alt="launchbase">
-                </div>
-                <div class="card-content">
-                    <p>Qtd de modulos:</p>
-                    <p>30</p>
-                </div>
-                <div class="card-info">
-                    <p>Preço</p>
-                    <p>Free</p>
-                </div>
-            
+        <div class="card" id="launchbase">
+
+            <div class="card-container">
+                <img src="/assets/launchbase.svg" alt="launchbase">
+            </div>
+            <div class="card-content">
+                <p>Qtd de modulos:</p>
+                <p>30</p>
+            </div>
+            <div class="card-info">
+                <p>Preço</p>
+                <p>Free</p>
+            </div>
+
         </div>
 
-        <div class="card">
+        <div class="card" id="gostack">
 
             <div class="card-container">
                 <img src="/assets/gostack.svg" alt="gostack">
@@ -79,12 +79,19 @@
 
     <div class="modal-overlay">
         <div class="modal">
-            <a href="" class="close-modal">
+            <a class="close-modal">
                 <span class="material-icons">
                     close
                 </span>
             </a>
-            <div class="modal-content"></div>
+            <a class="maximize-modal">
+                <span class="material-icons">
+                    aspect_ratio
+                </span>
+            </a>
+            <div class="modal-content">
+                <iframe src="" frameborder="0"></iframe>
+            </div>
         </div>
     </div>
 
